# gamacros

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cliff.toml  justfile  session-ses_33bb.md
.beads/: .gitignore  metadata.json
.cargo/: config.toml
crates/gamacros-control/: Cargo.toml
crates/gamacros-control/examples/: scroll.rs
crates/gamacros-control/src/: key.rs  key_combo.rs  performer.rs
crates/gamacros-gamepad/src/: runtime.rs
crates/gamacros-workspace/: Cargo.toml
crates/gamacros-workspace/resources/: gc_profile.yaml
crates/gamacros-workspace/src/: lib.rs  profile.rs  profile_watcher.rs
crates/gamacros-workspace/src/v1/: parse.rs  profile.rs  schema.json
crates/gamacrosd/: Cargo.toml
crates/gamacrosd/benches/: buttons.rs  sticks.rs
crates/gamacrosd/src/: accessibility.rs  lib.rs  logging.rs  main.rs  runner.rs
crates/gamacrosd/src/app/: binding.rs  effect.rs  gamacros.rs  mod.rs
crates/gamacrosd/src/app/stick/: mod.rs  repeat.rs  tick.rs  util.rs
crates/gamacrosd/src/domain/: activity_reduce.rs  api_reduce.rs  controller_reduce.rs  event.rs  mod.rs  profile_reduce.rs  reduce.rs  state.rs  stick_reduce.rs  stick_state.rs  timer_reduce.rs  transition.rs  wake.rs
crates/padjutsu-bit/: README.md
crates/padjutsu-bit/derive/: Cargo.toml  README.md
crates/padjutsu-bit/derive/examples/: derive_bitmask.rs
crates/padjutsu-bit/derive/src/: derive.rs
crates/padjutsu-bit/mask/: Cargo.toml
crates/padjutsu-bit/mask/examples/: README.md  atomic_usage.rs  basic_usage.rs  macro_pad.rs  with_derive.rs
crates/padjutsu-control/: Cargo.toml
crates/padjutsu-control/examples/: mouse_move.rs  perform_key_combo.rs  press_release.rs  scroll.rs
crates/padjutsu-control/src/: key_combo.rs  lib.rs  performer.rs  worker.rs
crates/padjutsu-gamepad/: Cargo.toml  build.rs
crates/padjutsu-gamepad/examples/: iokit_probe.rs
crates/padjutsu-gamepad/src/: lib.rs  manager.rs  metrics.rs  runtime.rs  types.rs
crates/padjutsu-workspace/: Cargo.toml
crates/padjutsu-workspace/benches/: parse.rs
crates/padjutsu-workspace/resources/: gc_profile.yaml
crates/padjutsu-workspace/src/: lib.rs  profile.rs  profile_parse.rs  profile_watcher.rs  workspace.rs
crates/padjutsu-workspace/src/v1/: parse.rs  schema.json
crates/padjutsud/: Cargo.toml
crates/padjutsud/benches/: buttons.rs  sticks.rs
crates/padjutsud/src/: accessibility.rs  lib.rs  logging.rs  main.rs  runner.rs
crates/padjutsud/src/api/: mod.rs  unix_sock.rs
crates/padjutsud/src/app/: binding.rs  effect.rs  mod.rs  padjutsu.rs
crates/padjutsud/src/app/stick/: compiled.rs  mod.rs  repeat.rs  tick.rs  util.rs
crates/padjutsud/src/domain/: activity_reduce.rs  api_reduce.rs  controller_reduce.rs  event.rs  mod.rs  profile_reduce.rs  reduce.rs  state.rs  stick_reduce.rs  stick_state.rs  timer_reduce.rs  transition.rs  wake.rs
docs/: fsm-refactor-plan.md
scripts/: install.sh
