[package]
name = "gamacros-control"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
enigo = { workspace = true, features = ["serde", "platform_specific"] }
log = "0.4"
serde = { workspace = true, features = ["derive"] }
smallvec = "1.13"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25", features = ["highsierra"] }
