[package]
name = "padjutsu-workspace"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
padjutsu-control = { workspace = true }
padjutsu-gamepad = { workspace = true }
padjutsu-bit-mask = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
ahash = { workspace = true, features = ["serde"] }
smallvec = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
codspeed-criterion-compat = { workspace = true }

[[bench]]
name = "parse"
harness = false
