[package]
name = "padjutsud"
version = "0.1.2"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
padjutsu-gamepad = { workspace = true }
padjutsu-control = { workspace = true }
padjutsu-workspace = { workspace = true }
padjutsu-bit-mask = { workspace = true }
enigo = { workspace = true }
ctrlc = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
lunchctl = { workspace = true }
log = { workspace = true }
colored = { workspace = true }
fern = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
bitcode = "0.6.7"
fd-lock = "4"

[target.'cfg(target_os = "macos")'.dependencies]
nsworkspace = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
codspeed-criterion-compat = { workspace = true }

[[bench]]
name = "buttons"
harness = false

[[bench]]
name = "sticks"
harness = false

[package.metadata.dist]
dist = true
